2008-04-04  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Implement set_display_name. (#525980) 
	With this patch we also do our own redirection handling which
	alyways allows redirects from /a/b -> /a/b/ (trainling slashes)
	even for non safe methods. Also some code was cleaned up.

2008-04-02  Christian Kellner  <gicmo@gnome.org>

	* hal/hal-utils.h:
	* hal/hal-utils.c:
	Create new files for utility functions and move get_disc_icon()
	and get_disc_name() here.
	Also create get_themed_icon_with_fallbacks() to create
	GThemedIcons with default fallbacks but with the ability to
	pass in another name to create the fallbacks from then the
	icon name.

	* hal/ghalmount.c:
	* hal/ghalvolume.c:
	Use newly created get_themed_icon_with_fallbacks () and pass
	in custom fallback name for encrypted mounts/volumes (#525153).

	* hal/Makefile.am:
	Add hal-utils.[hc]

	* programs/gvfs-mount.c:
	Display the icon names for mounts/volumes if the icon is
	a GThemedIcon.
	
	[Merged from gnome-2-22]

2008-04-01  Sebastien Bacher  <seb128@ubuntu.com>

	* hal/ghalmount.c: (format_size_for_display), (do_update_from_hal):
	Use consistent translatable strings for mounts and volume (#525286)

2008-03-31  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Get the right size of the command messages.
	Actually send file attributes in mkdir request.

2008-03-31  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendsftp.c: Make sure we send (error)
	replies to all outstanding jobs and unmount the mount
	in case of an error occures while reading data from
	the pipe to the ssh agent (e.g. if the ssh process died).

2008-03-31  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsdaemondbus.[ch]:
	In call_sync, on stale cache errors due to a
	mount daemon disappearing, invalidate caches and
	return G_VFS_ERROR_RETRY so that the caller can
	retry with fresh caches.
	
        * client/gdaemonfile.c:
	Retry calls on G_VFS_ERROR_RETRY.
